# cggmp21

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  Makefile  README.md  SECURITY.md  clippy.toml  katex-header.html  package-lock.json  shell.nix
.github/: changelog.sh  diff-pr-comment.tpl  pr-comment.tpl
.github/workflows/: deps.yml  docs.yml  publish.yml  readme.yml  rust.yml
cggmp21/: CHANGELOG.md  Cargo.toml
cggmp21-keygen/: CHANGELOG.md  Cargo.toml
cggmp21-keygen/src/: errors.rs  execution_id.rs  lib.rs  non_threshold.rs  progress.rs  rng.rs  security_level.rs  threshold.rs  utils.rs
cggmp21-keygen/src/utils/: hex_or_bin.rs
cggmp21/docs/: enforce_reliable_broadcast.md  mpc_message.md  validated_key_share_disclaimer.md  validated_key_share_note.md
cggmp21/src/: errors.rs  execution_id.rs  key_refresh.rs  key_share.rs  keygen.rs  lib.rs  progress.rs  security_level.rs  signing.rs  supported_curves.rs  trusted_dealer.rs  util.rs  utils.rs  zk.rs
cggmp21/src/key_refresh/: aux_only.rs  non_threshold.rs
cggmp21/src/keygen/: non_threshold.rs  threshold.rs
cggmp21/src/zk/: no_small_factor_modulus.rs  ring_pedersen_parameters.rs
docs/: README.md  incomplete_key_share.md  key_share.md  redirect.html  toc-cggmp21.md  validated_key_share_note.md
hex_or_bin/: hex_or_bin.rs
key-share/: CHANGELOG.md  Cargo.toml
key-share/src/: lib.rs  serde_fix.rs  trusted_dealer.rs  utils.rs  valid.rs
spec/: README.md  main.tex  ref.bib
src/: execution_id.rs  key_share.rs  keygen.rs  lib.rs  security_level.rs  signing.rs  trusted_dealer.rs  utils.rs
test-data/: precomputed_shares.json  pregenerated_primes.json
test-data/key_shares/: n10-secp256r1.json  n2-secp256r1.json  n3-secp256r1.json  n5-secp256r1.json  n7-secp256r1.json
test-data/old-shares/: README.md
test-data/old-shares/v0.1.1/: secp256k1-threshold-false.cbor  secp256k1-threshold-false.json  secp256k1-threshold-true.cbor  secp256k1-threshold-true.json  secp256r1-threshold-false.cbor  secp256r1-threshold-false.json  secp256r1-threshold-true.cbor  secp256r1-threshold-true.json  stark-threshold-false.cbor  stark-threshold-false.json  stark-threshold-true.cbor  stark-threshold-true.json
test-data/old-shares/v0.2/: secp256k1-threshold-false-hd-false.cbor  secp256k1-threshold-false-hd-true.cbor  secp256k1-threshold-false-hd-true.json  secp256k1-threshold-true-hd-false.json  secp256k1-threshold-true-hd-true.cbor  secp256r1-threshold-false-hd-false.cbor  secp256r1-threshold-false-hd-true.cbor  secp256r1-threshold-true-hd-true.json  stark-threshold-false-hd-false.cbor  stark-threshold-false-hd-false.json  stark-threshold-false-hd-true.json
test-data/old-shares/v0.2.1/: secp256k1-threshold-false-hd-false.json  secp256k1-threshold-true-hd-false.cbor  secp256k1-threshold-true-hd-true.json  secp256r1-threshold-false-hd-false.json  secp256r1-threshold-false-hd-true.json  secp256r1-threshold-true-hd-false.cbor  secp256r1-threshold-true-hd-false.json  secp256r1-threshold-true-hd-true.cbor  stark-threshold-false-hd-true.cbor  stark-threshold-true-hd-false.cbor  stark-threshold-true-hd-false.json  stark-threshold-true-hd-true.cbor  stark-threshold-true-hd-true.json
test-data/old-shares/v0.2.3/: secp256k1-threshold-false-hd-false.cbor  secp256k1-threshold-false-hd-false.json  secp256k1-threshold-false-hd-true.cbor  secp256k1-threshold-false-hd-true.json  secp256k1-threshold-true-hd-false.cbor  secp256k1-threshold-true-hd-false.json  secp256k1-threshold-true-hd-true.cbor  secp256k1-threshold-true-hd-true.json  secp256r1-threshold-false-hd-false.cbor  secp256r1-threshold-false-hd-false.json  secp256r1-threshold-false-hd-true.cbor  secp256r1-threshold-false-hd-true.json  secp256r1-threshold-true-hd-false.cbor  secp256r1-threshold-true-hd-false.json  secp256r1-threshold-true-hd-true.cbor  secp256r1-threshold-true-hd-true.json  stark-threshold-false-hd-false.cbor  stark-threshold-false-hd-false.json  stark-threshold-false-hd-true.cbor  stark-threshold-false-hd-true.json  stark-threshold-true-hd-false.cbor  stark-threshold-true-hd-false.json  stark-threshold-true-hd-true.cbor  stark-threshold-true-hd-true.json
tests/: Cargo.toml
tests/src/: external_verifier.rs  lib.rs
tests/tests/: key_refresh.rs  keygen.rs  pipeline.rs  signing.rs  stark_prehashed.rs  trusted_dealer.rs
tests/tests/it/: key_refresh.rs  keygen.rs  main.rs  old_shares.rs  pipeline.rs  signing.rs  stark_prehashed.rs  trusted_dealer.rs
tests/tests/precomputed_shares/: mod.rs
wasm/no_std/: Cargo.toml
wasm/no_std/src/: lib.rs
