[workspace]
resolver = "2"
members = [
    "cggmp21",
    "cggmp21-keygen",
    "key-share",
    "tests",
]
exclude = [
    "wasm/no_std",
]

[workspace.dependencies]
cggmp21 = { version = "0.4", path = "cggmp21" }
cggmp21-keygen = { version = "0.2", path = "cggmp21-keygen" }
key-share = { version = "0.3", path = "key-share", default-features = false }

generic-ec = { version = "0.4.0-rc4", git = "https://github.com/dfns/generic-ec", branch = "update-udigest", default-features = false } 
generic-ec-zkp = { version = "0.4.0-rc4", git = "https://github.com/dfns/generic-ec", branch = "update-udigest", default-features = false } 
round-based = { version = "0.3", default-features = false }

paillier-zk = "0.4.0" 
udigest = { version = "0.2.0-rc4", default-features = false }

digest = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rand_hash = { version = "0.1.0-rc4", git = "https://github.com/dfns/rand_hash", branch = "udigest-rc3" }
rand_dev = "0.1"

futures = "0.3"

anyhow = "1"
thiserror = "1"
displaydoc = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false }
serde_with = { version = "2", default-features = false }
serde_json = "1"
hex = { version = "0.4", default-features = false }

slip-10 = { version = "0.4.0-rc4", git = "https://github.com/dfns/slip-10", branch = "update-generic-ec", default-features = false }

generic-tests = "0.1"

[patch.crates-io.paillier-zk]
git = "https://github.com/dfnsco/paillier-zk-private"
branch = "unambiguous-challenge"

[patch.crates-io.udigest]
git = "https://github.com/dfns/udigest"
branch = "proc-macro-clippy"

[patch.crates-io.generic-ec]
git = "https://github.com/dfns/generic-ec"
branch = "update-udigest"

[patch.crates-io.rand_hash]
git = "https://github.com/dfns/rand_hash"
branch = "udigest-rc3"

[patch.crates-io.slip-10]
git = "https://github.com/dfns/slip-10"
branch = "update-generic-ec"
