[workspace]
resolver = "2"
members = [
    "cggmp21",
    "cggmp21-keygen",
    "key-share",
    "tests",
]
exclude = [
    "wasm/no_std",
]

[workspace.dependencies]
cggmp21 = { version = "0.4", path = "cggmp21" }
cggmp21-keygen = { version = "0.3", path = "cggmp21-keygen" }
key-share = { version = "0.4", path = "key-share", default-features = false }

generic-ec = { version = "0.4", default-features = false } 
generic-ec-zkp = { version = "0.4", default-features = false } 
round-based = { version = "0.3", default-features = false }

paillier-zk = "0.4.1" 
udigest = { version = "0.2.1", default-features = false }

digest = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rand_hash = { version = "0.1" }
rand_dev = "0.1"

futures = "0.3"

anyhow = "1"
thiserror = "1"
displaydoc = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false }
serde_with = { version = "2", default-features = false }
serde_json = "1"
hex = { version = "0.4", default-features = false }

slip-10 = { version = "0.4", default-features = false }

generic-tests = "0.1"

[patch.crates-io.udigest]
git = "https://github.com/dfns/udigest"
branch = "udigest_as"

[patch.crates-io.udigest-derive]
git = "https://github.com/dfns/udigest"
branch = "udigest_as"

[patch.crates-io.paillier-zk]
git = "https://github.com/dfns/paillier-zk"
branch = "udigest_as"
