[package]
name = "cggmp21-keygen"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "UC-secure DKG implementation based on CGGMP21 paper"
repository = "https://github.com/dfns/cggmp21"
categories = ["algorithms", "cryptography"]
keywords = ["mpc", "dkg", "threshold-signatures", "tss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key-share = { path = "../key-share", version = "0.2", default-features = false, features = ["serde"] }
slip-10 = { version = "0.3", default-features = false, optional = true }

generic-ec = { version = "0.3", default-features = false, features = ["serde", "udigest"] }
generic-ec-zkp = { version = "0.3", default-features = false, features = ["serde", "udigest"] }
udigest = { version = "0.1", default-features = false, features = ["derive"]}

round-based = { version = "0.3", default-features = false, features = ["derive"] }

sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "2", default-features = false }
hex = { version = "0.4", default-features = false, features = ["serde"] }

displaydoc = { version = "0.2", default-features = false }
thiserror = { version = "1", optional = true }

[features]
default = ["std"]

std = ["thiserror", "key-share/std", "udigest/std", "round-based/std"]
hd-wallets = ["slip-10", "key-share/hd-wallets"]
state-machine = ["round-based/state-machine"]
