[package]
name = "cggmp21"
version = "0.0.0"
edition = "2021"

license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "d", features = ["serde"] }
generic-ec-zkp = { git = "https://github.com/dfns-labs/generic-ec", branch = "d", features = ["serde"] }
round-based = { git = "https://github.com/Zengo-X/round-based-protocol", branch = "round-based2", features = ["derive"] }

paillier-zk = { git = "https://github.com/dfns-labs/paillier-zk", branch = "plus-minus", default-features = false, features = ["serde"] }

digest = "0.10"
sha2 = "0.10"
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false }

futures = "0.3"

thiserror = "1"
phantom-type = "0.4"

serde = { version = "1", features = ["derive"] }
serde_with = "2"
serde_json = "1"
hex = { version = "0.4", default-features = false, features = ["serde"] }

# We don't depend on this crates directly, but need this crate to have `serde` feature enabled
generic-array = { version = "0.14", features = ["serde"] }

[dev-dependencies]
round-based = { git = "https://github.com/Zengo-X/round-based-protocol", branch = "round-based2", features = ["derive", "dev"] }

rand = "0.8"
rand_dev = "0.1"
rand_chacha = "0.3"

tokio = { version = "1", features = ["macros"] }

generic-tests = "0.1"
test-case = "2.2"

[features]
default = ["paillier-zk/gmp"]
all-curves = ["curve-secp256k1", "curve-secp256r1"]
curve-secp256k1 = ["generic-ec/curve-secp256k1"]
curve-secp256r1 = ["generic-ec/curve-secp256r1"]