[package]
name = "cggmp21"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TSS ECDSA implementation based on CGGMP21 paper"
repository = "https://github.com/dfns/cggmp21"
categories = ["algorithms", "cryptography"]
keywords = ["mpc", "threshold-signatures", "tss", "ecdsa", "t-ecdsa"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cggmp21-keygen = { path = "../cggmp21-keygen", version = "0.1" }
key-share = { path = "../key-share", version = "0.2" }

generic-ec = { version = "0.2", features = ["serde", "udigest"] }
generic-ec-zkp = { version = "0.2", features = ["serde", "udigest"] }
round-based = { version = "0.2", features = ["derive"] }

paillier-zk = { version = "0.2", features = ["serde"] }
udigest = { version = "0.1", features = ["std", "derive"]}

digest = "0.10"
sha2 = "0.10"
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false }

futures = "0.3"

thiserror = "1"

serde = { version = "1", features = ["derive", "rc"] }
serde_with = { version = "2" }
hex = { version = "0.4", default-features = false, features = ["serde"] }

slip-10 = { version = "0.2", optional = true, features = ["std"] }

[dev-dependencies]
round-based = { version = "0.2", features = ["derive", "dev"] }

rand = "0.8"
rand_dev = "0.1"
rand_chacha = "0.3"

generic-tests = "0.1"

[features]
all-curves = ["curve-secp256k1", "curve-secp256r1", "curve-stark"]
curve-secp256k1 = ["generic-ec/curve-secp256k1"]
curve-secp256r1 = ["generic-ec/curve-secp256r1"]
curve-stark = ["generic-ec/curve-stark"]
hd-wallets = ["dep:slip-10", "cggmp21-keygen/hd-wallets"]
spof = ["key-share/spof"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
