[package]
name = "key-share"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Key share of any Threshold Signature Scheme (TSS)"
repository = "https://github.com/dfns/cggmp21"
categories = ["cryptography"]
keywords = ["mpc", "threshold-signatures", "tss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { version = "0.2.3", default-features = false, features = ["alloc"] }
generic-ec-zkp = { version = "0.2", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", optional = true }

slip-10 = { version = "0.2", optional = true }
udigest = { version = "0.1", default-features = false, features = ["alloc", "derive"], optional = true }

serde = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }
hex = { version = "0.4", default-features = false, features = ["serde"], optional = true }
serde_with = { version = "2", default-features = false, features = ["alloc"], optional = true }

thiserror = { version = "1", optional = true }
displaydoc = { version = "0.2", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["std"]

serde = ["dep:serde", "serde_with", "hex", "generic-ec/serde"]
hd-wallets = ["slip-10"]
spof = ["dep:rand_core"]
udigest = ["dep:udigest", "generic-ec/udigest"]

std = ["dep:thiserror"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
