[package]
name = "cggmp21-tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cggmp21 = { workspace = true, features = ["all-curves", "spof", "state-machine"] }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }

rand = { workspace = true }
rand_dev = { workspace = true }

sha2 = { workspace = true }

round-based = { workspace = true, features = ["derive", "dev", "state-machine"] }
generic-ec = { workspace = true, features = ["serde", "all-curves"] }

bpaf = "0.7"
include_dir = "0.7"
ciborium = "0.2"

tokio = { version = "1", features = ["macros"] }
futures = "0.3"

lazy_static = "1.4"

# external verifiers
secp256k1 = { version = "0.26", features = ["global-context", "bitcoin-hashes"] }
starknet-crypto = { version = "0.6" }
starknet-core = { version = "0.6" }
starknet-accounts = { version = "0.5" }
starknet-providers = { version = "0.6" }
starknet-signers = { version = "0.4" }
url = "2.4"

[dev-dependencies]
generic-tests = "0.1"
test-case = "3"

[features]
hd-wallet = ["cggmp21/hd-wallet"]

[[bin]]
name = "precompute_shares"
required-features = ["hd-wallet"]

[[bin]]
name = "measure_perf"
