[package]
name = "crates-compile-in-nostd-wasm"
version = "0.1.0"
edition = "2021"

# Only the crates below have wasm/no_std support
[dependencies.key-share]
path = "../../key-share"
default-features = false
features = ["serde", "hd-wallets", "spof", "udigest"]

[dependencies.cggmp21-keygen]
path = "../../cggmp21-keygen"
default-features = false
features = ["hd-wallets", "state-machine"]

[patch.crates-io.round-based]
git = "https://github.com/dfns/round-based"
branch = "m"
