[package]
name = "crates-compile-in-nostd-wasm"
version = "0.1.0"
edition = "2021"
publish = false

# Only the crates below have wasm/no_std support
[dependencies.key-share]
path = "../../key-share"
default-features = false
features = ["serde", "hd-wallets", "spof", "udigest"]

[dependencies.cggmp21-keygen]
path = "../../cggmp21-keygen"
default-features = false
features = ["hd-wallets", "state-machine"]

[patch.crates-io.udigest]
git = "https://github.com/dfns/udigest"
branch = "udigest_as"

[patch.crates-io.udigest-derive]
git = "https://github.com/dfns/udigest"
branch = "udigest_as"

[patch.crates-io.paillier-zk]
git = "https://github.com/dfns/paillier-zk"
branch = "udigest_as"
